unpackaged/main/default/objects/User/fields/About_Me_longtext__c.field-meta.xml
<CustomField>
    <fullName>About_Me_longtext__c</fullName>
    <label>About Me</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>