unpackaged/main/default/objects/User/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Contact.AccountId</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>