unpackaged/main/default/objects/User/fields/Availability_for_Navigation__c.field-meta.xml
<CustomField>
    <fullName>Availability_for_Navigation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Availability for Navigation</label>
    <type>Checkbox</type>
</CustomField>