unpackaged/main/default/objects/User/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <label>Credentials</label>
    <type>TextArea</type>
</CustomField>