unpackaged/main/default/objects/User/fields/MyKomen_Health_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>MyKomen_Health_Onboarding_Status__c</fullName>
    <description>Used by MyKomen Health Community to capture whether or not a user has completed or skipped the onboarding process. A blank value will result in the onboarding screen being shown when the user logs in.</description>
    <label>MyKomen Health Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>