unpackaged/main/default/objects/User/fields/MyKomen_User_Id__c.field-meta.xml
<CustomField>
    <fullName>MyKomen_User_Id__c</fullName>
    <description>User Id of the MyKomen User used to authenticate to MyKomen Health. Field is relevant for community users only.</description>
    <label>MyKomen User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>