unpackaged/main/default/objects/User/fields/Special_Areas__c.field-meta.xml
<CustomField>
    <fullName>Special_Areas__c</fullName>
    <label>Special Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Place Holder 1</fullName>
            </value>
            <value>
                <fullName>Place Holder 2</fullName>
            </value>
            <value>
                <fullName>Place Holder 3</fullName>
            </value>
            <value>
                <fullName>Place Holder 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>